# plant

./: .env.example  .gitignore  README.md  install.sh
arduino/: README.md  arduino.ino  bme280.c  ds3231.c  ds3231.h  i2c.c  i2c.h  proto.c  proto.h  time_struct.h  timers.c  timers.h  usart.c  usart.h
collector/: Cargo.toml  Dockerfile  README.md  build-debug.sh  build.sh
collector/src/: api.rs  main.rs  metrics.rs  port_info.rs  select.rs
collector/src/serial/: mod.rs  path.rs  port_info.rs
hardware/: CMakeLists.txt  README.md  avr-new.h  session.vim
hardware/cmake/: avr-gcc-toolchain.cmake
hardware/src/: CMakeLists.txt  avr-gpio.h  avr-new.cpp  avr-new.h  bme280.c  bme280.cpp  bme280.h  convert_util.c  convert_util.cpp  convert_util.h  ds3231.cpp  ds3231.h  i2c-avr.cpp  i2c.h  main.c  main.cpp  pinio.h  plant_message_struct.h  proto.c  proto.cpp  proto.h  scd40.c  scd40.cpp  scd40.h  time_struct.h  timer_usart.h  timers.c  timers.cpp  timers.h  usart.c  usart.cpp  usart.h
infra/: README.md  docker-compose.yml
infra/grafana/provisioning/dashboards/: plant.json  providers.yml
infra/prometheus/: prometheus.yml
