[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bytes = "1.5.0"
console = "0.15.7"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
lazy_static = "1.4.0"
prometheus = "0.13.3"
rand = "0.8.5"
serialport = "4.2.2"
tokio = {version = "1.32.0", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
tokio-serial = "5.4.4"
